--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,11 @@
 .App {
-  text-align: center;
+  position: relative;
+  background: #f6f6f6;
+  height: 100%;
+  width: 100%;
 }
 
-h1 {
-  color: #0fc1d0;
-  font-size: 25px;
+.main-container{
+  position: relative;
+  width: 100%;
 }
