--- a/src/App.css
+++ b/src/App.css
@@ -8,4 +8,56 @@
 .main-container{
   position: relative;
   width: 100%;
+  height: 100%;
+}
+
+.flex-row{
+  position: relative;
+  margin-left: 0;
+  margin-right: 0;
+  height: auto;
+  zoom: 1;
+  display: block;
+}
+
+.flex-row::before,.flex-row::after{
+  content: " ";
+  display: table;
+}
+
+.flex-row::after {
+  clear: both;
+  visibility: hidden;
+  font-size: 0;
+  height: 0;
+}
+
+@media only screen and (min-width: 992px){
+  .col-4 {
+    display: block;
+    width: 33.33333333%;
+  }
+
+  .col-3 , .col-4, .col-6, .col-11{
+    position: relative;
+    min-height: 1px;
+    padding-left: 0;
+    padding-right: 0;
+    float: left;
+    -webkit-box-flex: 0;
+    -ms-flex: 0 0 auto;
+    flex: 0 0 auto;
+  }
+}
+
+
+.col-3 , .col-4, .col-6, .col-11{
+  position: relative;
+  min-height: 1px;
+  padding-left: 0;
+  padding-right: 0;
+  float: left;
+  -webkit-box-flex: 0;
+  -ms-flex: 0 0 auto;
+  flex: 0 0 auto;
 }
