--- a/src/components/announcement.css
+++ b/src/components/announcement.css
@@ -16,6 +16,11 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-flow: row wrap;
+    flex-flow: row wrap;
 }
 .announcement-wrapper .row-flex .item{
     display: block;
