--- a/src/App.css
+++ b/src/App.css
@@ -5,10 +5,26 @@
     width: 100%;
 }
 
+.layout{
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-flex: 1;
+    -ms-flex: auto;
+    flex: auto;
+    background: #ececec;
+}
+
 .main-container{
     position: relative;
-    width: 100%;
-    height: 100%;
+    -webkit-box-flex: 1;
+    -ms-flex-positive: 1;
+    flex-grow: 1;
+    -ms-flex-negative: 0;
+    flex-shrink: 0;
+    flex: auto;
 }
 
 .flex-row{
@@ -50,7 +66,7 @@ ul, ol {
 @media only screen and (min-width: 992px){
 
 }
-.col-3 , .col-4, .col-md-4,.col-lg-4, .col-6,.col-10, .col-md-10,.col-lg-10, .col-11{
+.col-3 , .col-4, .col-md-4,.col-lg-4, .col-6,.col-10, .col-md-10,.col-lg-10, .col-11, .col-12, .col-md-12{
   position: relative;
   min-height: 1px;
   padding-left: 0;
