--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,16 @@ body {
   min-width: 980px;
   height: 100%;
 }
+
+h1 {
+  font-size: 2em;
+}
+
+div , ul{
+  margin: 0;
+  padding: 0;
+}
+
+input[type= "search"]{
+  border-sizing: border-box;
+}
