--- a/src/containers/homepage.css
+++ b/src/containers/homepage.css
@@ -120,6 +120,13 @@
     bottom: 0;
 }
 
+
+#advantage-container{
+    -webkit-box-shadow: 0 -1px 4px 0 rgba(0, 0, 0, 0.03);
+    box-shadow: 0 -1px 4px 0 rgba(0, 0, 0, 0.03);
+    background: white;
+    padding: 30px 0;
+}
 #advantage-container .advantage-wrapper .advantageTitle{
     color: #333;
     font-size: 16px;
