--- a/src/containers/markets.css
+++ b/src/containers/markets.css
@@ -100,7 +100,8 @@
 }
 .material-icons.iconStar:before {
     content: "star";
-}.material-icons.iconMoney:before {
+}
+.material-icons.iconMoney:before {
     content: "monetization_on";
 }
 
@@ -429,3 +430,221 @@
     position: relative;
 }
 
+.table {
+    font-size: 14px;
+    color: rgba(0, 0, 0, 0.7);
+    overflow: hidden;
+    position: relative;
+    border-radius: 4px 4px 0 0;
+}
+.table .table-body {
+    padding-right: 1px;
+}
+
+.table-body {
+    -webkit-transition: opacity 0.3s ease;
+    -o-transition: opacity 0.3s ease;
+    transition: opacity 0.3s ease;
+}
+
+.market table {
+    background: white;
+}
+
+.table_1 table {
+    width: 100%;
+    border-collapse: collapse;
+    border-spacing: 0;
+    overflow: visible;
+}
+.table table {
+    width: 100%;
+    border-collapse: separate;
+    border-spacing: 0;
+    text-align: left;
+    border-radius: 4px 4px 0 0;
+    overflow: hidden;
+}
+
+.table-thead > tr, .table-tbody > tr {
+    -webkit-transition: all .3s;
+    -o-transition: all .3s;
+    transition: all .3s;
+}
+
+.table-middle .table-thead > tr > th:not(.table-selection-column), .table-middle .table-tbody > tr > td {
+    padding: 10px 8px;
+}
+
+.table_1 table thead > tr > th:first-child {
+    padding-left: 26px !important;
+}
+.table_1 table thead > tr > th {
+    color: #9a9aa2;
+    font-weight: 400;
+    height: 50px;
+    vertical-align: middle;
+    padding: 12px 0 !important;
+    border-bottom: 1px solid #eff1f4;
+    background: transparent;
+}
+
+.table-thead > tr > th, .table-tbody > tr > td {
+    padding: 16px 8px;
+    word-break: break-all;
+}
+.table-thead > tr > th {
+    background: #f7f7f7;
+    font-weight: 500;
+    -webkit-transition: background .3s ease;
+    -o-transition: background .3s ease;
+    transition: background .3s ease;
+    text-align: left;
+    color: rgba(0, 0, 0, 0.9);
+}
+.table-column-sorter {
+    position: relative;
+    margin-left: 4px;
+    display: inline-block;
+    width: 14px;
+    height: 1em;
+    vertical-align: middle;
+    text-align: center;
+}
+.table-column-sorter-up, .table-column-sorter-down {
+    line-height: 4px;
+    display: block;
+    width: 14px;
+    cursor: pointer;
+}
+
+:root .table-column-sorter .iconCaretUp, :root .table-column-sorter .iconCaretDown {
+    font-size: 16px;
+}
+:root .table-column-sorter .iconCaretUp, :root .table-column-sorter .iconCaretDown {
+    -webkit-filter: none;
+    filter: none;
+}
+.table-column-sorter .iconCaretUp, .table-column-sorter .iconCaretDown {
+    display: inline-block;
+    font-size: 14px;
+    font-size: 8px \9;
+    -webkit-transform: scale(0.66666667) rotate(0deg);
+    -ms-transform: scale(0.66666667) rotate(0deg);
+    transform: scale(0.66666667) rotate(0deg);
+    -ms-filter: "progid:DXImageTransform.Microsoft.Matrix(sizingMethod='auto expand', M11=1, M12=0, M21=0, M22=1)";
+    zoom: 1;
+    line-height: 4px;
+    height: 4px;
+    color: #999;
+    -webkit-transition: all .3s;
+    -o-transition: all .3s;
+    transition: all .3s;
+}
+
+.sorticon {
+    display: inline-block;
+    font-style: normal;
+    vertical-align: baseline;
+    text-align: center;
+    text-transform: none;
+    line-height: 1;
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
+.table-middle .table-column-sorter-up:after {
+    top: -13px;
+    height: 13px;
+}
+.table-column-sorter-up:after {
+    top: -19px;
+}
+.table-column-sorter-up:after, .table-column-sorter-down:after {
+    position: absolute;
+    content: '';
+    height: 20px;
+    width: 14px;
+    left: 0;
+}
+
+.table_1 table tbody > tr {
+    border: 1px solid transparent;
+    -webkit-box-sizing: content-box;
+    box-sizing: content-box;
+    -webkit-transition: none;
+    -o-transition: none;
+    transition: none;
+    overflow: hidden;
+}
+
+.table_1 table tbody > tr > td {
+    padding: 0 !important;
+    background: #fff;
+    height: 50px;
+    vertical-align: middle;
+    border: 1px solid transparent;
+}
+.table-tbody > tr > td {
+    border-bottom: 1px solid #e9e9e9;
+    -webkit-transition: all .3s;
+    -o-transition: all .3s;
+    transition: all .3s;
+}
+
+.table_1 .tdHeadBox {
+    position: relative;
+    padding: 12px 12px 12px 24px;
+}
+.table_1 .dealTop{
+    position: absolute;
+    left: 0;
+    top: 0;
+    display: block;
+    text-indent: -9999px;
+    width: 0;
+    height: 0;
+    border-top: 12px solid #c2cad1;
+    border-right: 12px solid transparent;
+    opacity: 0;
+    cursor: pointer;
+}
+.cursor {
+    cursor: pointer;
+}
+
+.changingIcon.left {
+    left: -14px;
+}
+
+.changingIcon {
+    position: absolute;
+    top: 0;
+    font-weight: normal;
+}
+.operateIcons {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+}
+
+.material-icons.iconEqualizer:before {
+    content: "bar_chart";
+}
+
+.operateIcons .material-icons.iconEqualizer {
+    color: #c2cad1;
+}
+
+.operateIcons .material-icons{
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    cursor: pointer;
+    font-size: 20px;
+    margin-right: 8px;
+}
+.operateIcons .fa-star {
+    cursor: pointer;
+}
