--- a/src/containers/markets.css
+++ b/src/containers/markets.css
@@ -648,3 +648,332 @@
 .operateIcons .fa-star {
     cursor: pointer;
 }
+
+#buy-span:hover .popover{
+
+}
+
+.overlay {
+    width: 264px;
+}
+.popover-placement-bottom, .popover-placement-bottomLeft, .popover-placement-bottomRight {
+    padding-top: 8px;
+}
+
+.popover-hidden {
+    display: none;
+}
+.quickTrade{
+    pointer-events: auto !important;
+}
+.quickTrade:after{
+    border-bottom-width: 0 !important;
+}
+.quickTrade:hover{
+    visibility: visible !important;
+    opacity: 1 !important;
+}
+.popover {
+    position: absolute;
+    top: 0;
+    left: -110px;
+    cursor: auto;
+    -webkit-user-select: text;
+    -moz-user-select: text;
+    -ms-user-select: text;
+    user-select: text;
+    white-space: normal;
+    font-size: 14px;
+    line-height: 1.5;
+    font-weight: normal;
+    text-align: left;
+    z-index: 1000;
+}
+
+.overlay .popover-content > .popover-arrow {
+    top: -5px;
+}
+.popover-placement-bottom > .popover-content > .popover-arrow {
+    left: 50%;
+    margin-left: -5px;
+    
+}
+.popover-placement-bottom > .popover-content > .popover-arrow, .popover-placement-bottomLeft > .popover-content > .popover-arrow, .popover-placement-bottomRight > .popover-content > .popover-arrow {
+    border-top-width: 0;
+    border-bottom-color: rgba(217, 217, 217, 0.7);
+}
+.popover-arrow {
+    border-width: 5px;
+}
+.popover-arrow, .popover-arrow:after {
+    position: absolute;
+    display: block;
+    width: 0;
+    height: 0;
+    border-color: transparent;
+    border-style: solid;
+}
+
+.popover-placement-bottom > .popover-content > .popover-arrow:after, .popover-placement-bottomLeft > .popover-content > .popover-arrow:after, .popover-placement-bottomRight > .popover-content > .popover-arrow:after {
+    content: " ";
+    top: 1px;
+    margin-left: -4px;
+    border-top-width: 0;
+    border-bottom-color: rgba(217, 217, 217, 0.7);
+}
+.popover-arrow:after {
+    border-width: 4px;
+    content: "";
+}
+.popover-inner-content {
+    padding: 8px 16px;
+    color: rgba(0, 0, 0, 0.7);
+}
+
+.itemTip{
+    font-size: 12px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    padding: 0 0 4px 0;
+}
+
+.itemTip > div {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+}
+
+.itemTip .bestPrice {
+    text-decoration: none;
+}
+
+.trade .form-item {
+    margin-bottom: 14px;
+}
+.form-item {
+    font-size: 14px;
+    margin-bottom: 24px;
+    color: rgba(0, 0, 0, 0.7);
+    vertical-align: top;
+}
+
+.form-item-control {
+    line-height: 32px;
+    position: relative;
+    zoom: 1;
+}
+.form-item-control:before, .form-item-control:after {
+    content: " ";
+    display: table;
+}
+.form-item-control:after {
+    clear: both;
+    visibility: hidden;
+    font-size: 0;
+    height: 0;
+}
+
+.inputNumberWithLabel {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+}
+
+.inputNumberWithLabel .inputNumber {
+    width: 65%;
+    margin-right: 0;
+    height: 32px;
+    line-height: 30px;
+}
+.input-number:hover {
+    border-color: #4896f2;
+}
+
+form .input-number {
+    margin-top: -1px;
+    margin-right: 8px;
+}
+.input-number {
+    position: relative;
+    padding: 4px 7px;
+    width: 100%;
+    line-height: 1.5;
+    color: rgba(0, 0, 0, 0.7);
+    background-color: #fff;
+    background-image: none;
+    -webkit-transition: all .3s;
+    -o-transition: all .3s;
+    transition: all .3s;
+    margin: 0;
+    padding: 0;
+    font-size: 14px;
+    height: 28px;
+    display: inline-block;
+    border: 1px solid #d9d9d9;
+    border-radius: 4px;
+    width: 80px;
+}
+
+.inputNumberWithLabel .inputNumber .input-number-input {
+    height: 30px;
+}
+.input-number-input {
+    width: 100%;
+    text-align: left;
+    outline: 0;
+    -moz-appearance: textfield;
+    height: 26px;
+    -webkit-transition: all 0.3s linear;
+    -o-transition: all 0.3s linear;
+    transition: all 0.3s linear;
+    color: rgba(0, 0, 0, 0.7);
+    background-color: #fff;
+    border: 0;
+    border-radius: 4px;
+    padding: 0 7px;
+    display: block;
+}
+
+
+
+.btn {
+    display: inline-block;
+    margin-bottom: 0;
+    font-weight: normal;
+    text-align: center;
+    -ms-touch-action: manipulation;
+    touch-action: manipulation;
+    cursor: pointer;
+    background-image: none;
+    border: 1px solid transparent;
+    white-space: nowrap;
+    line-height: 1.15;
+    padding: 0 15px;
+    font-size: 14px;
+    border-radius: 4px;
+    height: 28px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    -webkit-transition: all 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
+    -o-transition: all 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
+    transition: all 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
+    position: relative;
+    border-color: #d9d9d9;
+
+    width: 100%;
+    color: #01aa78;
+    background: #f7f7f7;
+
+    padding: 0 15px;
+    font-size: 16px;
+    border-radius: 4px;
+    height: 32px;
+}
+
+.btn:hover{
+    color: #f7f7f7;
+    background: #01aa78;
+}
+
+.btn, .btn:active, .btn:focus {
+    outline: 0;
+}
+
+.inputNumberWithLabel .inputNumberLabel {
+    width: 35%;
+    white-space: nowrap;
+    text-align: center;
+    background: rgba(0, 0, 0, 0.03);
+    border: 1px solid rgba(0, 0, 0, 0.15);
+    border-left: none;
+    border-radius: 0 4px 4px 0;
+    height: 32px;
+    line-height: 30px;
+}
+
+.sliderWrapper {
+    position: absolute;
+    top: -5px;
+    left: 56px;
+    right: 0;
+}
+
+.rc-slider {
+    position: relative;
+    margin: 10px 6px;
+    padding: 4px 0;
+    height: 12px;
+    cursor: pointer;
+}
+
+.rc-slider-rail {
+    position: absolute;
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
+    background-color: #e9e9e9;
+    -webkit-transition: background-color 0.3s ease;
+    -o-transition: background-color 0.3s ease;
+    transition: background-color 0.3s ease;
+}
+
+.rc-slider-track {
+    position: absolute;
+    height: 4px;
+    border-radius: 4px;
+    background-color: #9fc8f8;
+    -webkit-transition: background-color 0.3s ease;
+    -o-transition: background-color 0.3s ease;
+    transition: background-color 0.3s ease;
+}
+
+.rc-slider-step {
+    position: absolute;
+    width: 100%;
+    height: 4px;
+    background: transparent;
+}
+
+.rc-slider-mark {
+    position: absolute;
+    top: 14px;
+    left: 0;
+    width: 100%;
+    font-size: 14px;
+}
+
+.rc-slider-handle:hover{
+    transform: scale(1.2,1.2); /* Standard syntax */
+}
+
+.rc-slider-handle {
+    position: absolute;
+    margin-left: -7px;
+    margin-top: -5px;
+    width: 14px;
+    height: 14px;
+    cursor: pointer;
+    border-radius: 50%;
+    border: solid 2px #87baf7;
+    background-color: #fff;
+    -webkit-transition: border-color 0.3s ease, -webkit-transform 0.3s cubic-bezier(0.18, 0.89, 0.32, 1.28);
+    transition: border-color 0.3s ease, -webkit-transform 0.3s cubic-bezier(0.18, 0.89, 0.32, 1.28);
+    -o-transition: border-color 0.3s ease, transform 0.3s cubic-bezier(0.18, 0.89, 0.32, 1.28);
+    transition: border-color 0.3s ease, transform 0.3s cubic-bezier(0.18, 0.89, 0.32, 1.28);
+    transition: border-color 0.3s ease, transform 0.3s cubic-bezier(0.18, 0.89, 0.32, 1.28), -webkit-transform 0.3s cubic-bezier(0.18, 0.89, 0.32, 1.28);
+}
