--- a/src/App.css
+++ b/src/App.css
@@ -105,6 +105,9 @@ ul, ol {
 .font-size-12 {
     font-size: 12px;
 }
+.font-size-14 {
+    font-size: 14px;
+}
 
 /*config global margin*/
 .mr-12{
@@ -118,6 +121,9 @@ ul, ol {
 }
 .mr-6 {
     margin-right: 6px;
+}
+.mb-6 {
+    margin-bottom: 6px;
 }
 .ml-6 {
     margin-left: 6px;
